# APIC-Fluid-Houdini-Plugin

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  WINDOWS_SETUP.md
include/: ApicGrid.h  ApicParticleSet.h  ApicSolver.h  CollisionHandler.h  PressureSolver.h  SOP_ApicFluidSolver.h  apic_types.h
python/: apic_fluid_hda.py  create_hda.py
src/: ApicGrid.cpp  ApicParticleSet.cpp  ApicSolver.cpp  CollisionHandler.cpp  PressureSolver.cpp  SOP_ApicFluidSolver.cpp  plugin.cpp
tests/: test_angular_momentum.cpp  test_p2g_conservation.cpp  test_pressure_solver.cpp
